--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,5 +1,6 @@
 // introduction section
 $arrow-distance: 175px;
+$arrow-distance-sm: 175px/4;
 
 // sections
 $padding-lateral: 100px; 
